# SEA-ME-Students

./: .gitignore  lfabel.md
Head_Unit-Yocto/Head_Unit_jun/: .gitignore  27.02.2026.md  CMakeLists.txt  CMakeLists.txt.user.712a512  HeadUnit.md  README.md  README_HEADUNIT.md  oe-logs  oe-workdir  run_cluster.sh  run_headunit.sh
Head_Unit-Yocto/Head_Unit_jun/SAM_Head_Unit/Head_Unit_jun/: CMakeLists.txt
Head_Unit-Yocto/Head_Unit_jun/SAM_Head_Unit/Head_Unit_jun/build_new/: compile_commands.json  head_unit
Head_Unit-Yocto/Head_Unit_jun/SAM_Head_Unit/Head_Unit_jun/build_preapi/: compile_commands.json  head_unit
Head_Unit-Yocto/Head_Unit_jun/SAM_Head_Unit/Head_Unit_jun/config/: vsomeip_headunit.json
Head_Unit-Yocto/Head_Unit_jun/SAM_Head_Unit/Head_Unit_jun/docs/: ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  ARCHITECTURE_DESIGN_EN.md  ARCHITECTURE_EN.md  HEAD_UNIT_DESIGN_EN.md  OPTIMIZATION_CYCLE_EN.md  VERIFICATION.md
Head_Unit-Yocto/Head_Unit_jun/SAM_Head_Unit/Head_Unit_jun/instrument_cluster/: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
Head_Unit-Yocto/Head_Unit_jun/SAM_Head_Unit/Head_Unit_jun/python/: gamepad_service.py
Head_Unit-Yocto/Head_Unit_jun/SAM_Head_Unit/Head_Unit_jun/src/: MainWindow.cpp  MainWindow.h  main.cpp
Head_Unit-Yocto/Head_Unit_jun/SAM_Head_Unit/src/: MainWindow.cpp
Head_Unit-Yocto/Head_Unit_jun/SAM_Head_Unit/src/widgets/: GearPanel.cpp
Head_Unit-Yocto/Head_Unit_jun/build_ipc/: compile_commands.json
Head_Unit-Yocto/Head_Unit_jun/build_ipc/core/hu_core_autogen/: deps
Head_Unit-Yocto/Head_Unit_jun/build_ipc/shell/hu_shell_autogen/: deps  mocs_compilation.cpp
Head_Unit-Yocto/Head_Unit_jun/build_modular/: compile_commands.json
Head_Unit-Yocto/Head_Unit_jun/build_modular/core/hu_core_autogen/: deps  mocs_compilation.cpp
Head_Unit-Yocto/Head_Unit_jun/build_modular/modules/ambient/: hu_module_ambient
Head_Unit-Yocto/Head_Unit_jun/build_modular/modules/call/: hu_module_call
Head_Unit-Yocto/Head_Unit_jun/build_modular/modules/media/: hu_module_media
Head_Unit-Yocto/Head_Unit_jun/build_modular/modules/navigation/: hu_module_navigation
Head_Unit-Yocto/Head_Unit_jun/build_modular/modules/settings/: hu_module_settings
Head_Unit-Yocto/Head_Unit_jun/build_modular/modules/youtube/: hu_module_youtube
Head_Unit-Yocto/Head_Unit_jun/build_modular/shell/: hu_shell
Head_Unit-Yocto/Head_Unit_jun/build_modular/shell/hu_shell_autogen/: deps  mocs_compilation.cpp
Head_Unit-Yocto/Head_Unit_jun/config/: vsomeip_headunit.json
Head_Unit-Yocto/Head_Unit_jun/core/: CMakeLists.txt
Head_Unit-Yocto/Head_Unit_jun/core/interfaces/: ILedController.h
Head_Unit-Yocto/Head_Unit_jun/core/ipc/: MockLedController.cpp  MockLedController.h  MockVehicleDataProvider.h  VSomeIPClient.cpp  VSomeIPClient.h
Head_Unit-Yocto/Head_Unit_jun/core/protocol/: ShellClient.cpp  ShellClient.h  ShellProtocol.cpp  ShellProtocol.h
Head_Unit-Yocto/Head_Unit_jun/docs/: CRITICAL_EVALUATION.md  CRITICAL_EVALUATION_EN.md  GAMEPAD_LOGIC_FLOW.md  HEAD_UNIT_DESIGN.md  IPC_VERIFICATION.md  OPTIMIZATION_CYCLE.md  VERIFICATION_EN.md
Head_Unit-Yocto/Head_Unit_jun/instrument_cluster/: CMakeLists.txt  dashboard.pro  run_cluster.sh
Head_Unit-Yocto/Head_Unit_jun/instrument_cluster/build-cmake-qt683/: compile_commands.json
Head_Unit-Yocto/Head_Unit_jun/instrument_cluster/build-cmake-qt683/PiRacerDashboard_autogen/: deps
Head_Unit-Yocto/Head_Unit_jun/instrument_cluster/build-rpi/: PiRacerDashboard
Head_Unit-Yocto/Head_Unit_jun/instrument_cluster/config/: vsomeip_cluster.json
Head_Unit-Yocto/Head_Unit_jun/instrument_cluster/docs/: SPECIFICATION.md  VERIFICATION_PLAN.md
Head_Unit-Yocto/Head_Unit_jun/instrument_cluster/python/: README.md  battery.py  piracer_bridge.py  requirements.txt
Head_Unit-Yocto/Head_Unit_jun/instrument_cluster/src/: MainWindow.cpp  MainWindow.h
Head_Unit-Yocto/Head_Unit_jun/instrument_cluster/src/ipc/: VSomeIPGearReceiver.cpp  VSomeIPGearReceiver.h
Head_Unit-Yocto/Head_Unit_jun/instrument_cluster/src/serial/: SerialReader.cpp  SerialReader.h
Head_Unit-Yocto/Head_Unit_jun/instrument_cluster/src/utils/: CalibrationManager.cpp  CalibrationManager.h  DataProcessor.cpp
Head_Unit-Yocto/Head_Unit_jun/modules/ambient/: CMakeLists.txt  main.cpp
Head_Unit-Yocto/Head_Unit_jun/modules/ambient/service/: AmbientService.cpp  AmbientService.h
Head_Unit-Yocto/Head_Unit_jun/modules/ambient/ui/: AmbientWindow.cpp  AmbientWindow.h
Head_Unit-Yocto/Head_Unit_jun/modules/call/: CMakeLists.txt  main.cpp
Head_Unit-Yocto/Head_Unit_jun/modules/call/service/: CallService.cpp  CallService.h
Head_Unit-Yocto/Head_Unit_jun/modules/call/ui/: CallWindow.cpp  CallWindow.h
Head_Unit-Yocto/Head_Unit_jun/modules/common/widgets/: GearPanel.cpp
Head_Unit-Yocto/Head_Unit_jun/modules/media/: CMakeLists.txt  main.cpp
Head_Unit-Yocto/Head_Unit_jun/modules/media/media/: MediaPlayer.cpp  MediaPlayer.h  PlaylistModel.h
Head_Unit-Yocto/Head_Unit_jun/modules/media/service/: MediaService.cpp  MediaService.h
Head_Unit-Yocto/Head_Unit_jun/modules/media/ui/: MediaWindow.cpp  MediaWindow.h
Head_Unit-Yocto/Head_Unit_jun/modules/navigation/: CMakeLists.txt  main.cpp
Head_Unit-Yocto/Head_Unit_jun/modules/navigation/service/: NavigationService.cpp  NavigationService.h
Head_Unit-Yocto/Head_Unit_jun/modules/navigation/ui/: NavigationWindow.cpp  NavigationWindow.h
Head_Unit-Yocto/Head_Unit_jun/modules/settings/: CMakeLists.txt  main.cpp
Head_Unit-Yocto/Head_Unit_jun/modules/youtube/: CMakeLists.txt  main.cpp
Head_Unit-Yocto/Head_Unit_jun/resources/: headunit.qrc
Head_Unit-Yocto/Head_Unit_jun/shell/: CMakeLists.txt  ModuleBridge.cpp  ModuleBridge.h  ModuleController.cpp  ModuleController.h  ShellWindow.cpp  ShellWindow.h  main.cpp
Head_Unit-Yocto/Head_Unit_jun/shell/widgets/: FallbackContentWidget.cpp  FallbackContentWidget.h  GlowOverlay.cpp  ReverseCameraWindow.h  SplashScreen.cpp  StatusBar.cpp  StatusBar.h  TabBar.cpp  TabBar.h
warmup/module03/Graphical_Phonebook/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  contacts.csv
(+296 files in other folders)
